--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Fares Zaraana - Graphic Designer, Video Editor, and Photographer">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Fares_Zaraana</title>
@@ -11,6 +10,9 @@
 <body>
     <header> 
         <a href="#main" class="logo">Fares</a>
+        <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
         <nav class="navigation">
             <a href="#services">Services</a>
             <a href="#projects">Projects</a>
@@ -19,7 +21,7 @@
     </header>
     
     <section class="main" id="main">
-        <div>
+        <div class="main-content">
             <h2>Hello, I'm Fares<br><span>Graphic Designer</span></h2>
             <h3>We make a difference with a word, with an idea, with a moment.</h3>
             <a href="#projects" class="main-btn">View My Work</a>
@@ -58,7 +60,7 @@
                 </div>
                 <div class="info">
                     <h3>photographer</h3>
-                    <p>I don't just take pictures — I freeze feelings.</p>
+                    <p>I don’t just take pictures — I freeze feelings.</p>
                 </div>
             </div>
         </div>
@@ -69,7 +71,7 @@
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/img1.png" alt="Project 1" loading="lazy">
+                    <img src="images/img1.png" alt="Project 1">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -81,7 +83,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/img2.jpg" alt="Project 2" loading="lazy">
+                    <img src="images/img2.jpg" alt="Project 2">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -93,7 +95,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/img3.jpg" alt="Project 3" loading="lazy">
+                    <img src="images/img3.jpg" alt="Project 3">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -105,7 +107,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/work1.jpg" alt="Project 4" loading="lazy">
+                    <img src="images/work1.jpg" alt="Project 4">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -117,7 +119,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/work1.jpg" alt="Project 5" loading="lazy">
+                    <img src="images/work1.jpg" alt="Project 5">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -129,7 +131,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/work1.jpg" alt="Project 6" loading="lazy">
+                    <img src="images/work1.jpg" alt="Project 6">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -174,7 +176,7 @@
             <a href="https://wa.me/message/2XIKAEDYOOQ5F1"><i class="fa-brands fa-square-whatsapp"></i></a>
         </div>
     </footer>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
