--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="info">
                     <h3>photographer</h3>
-                    <p>I don’t just take pictures — I freeze feelings.</p>
+                    <p>I don't just take pictures — I freeze feelings.</p>
                 </div>
             </div>
         </div>
@@ -71,7 +71,7 @@
         <div class="content">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/img1.png" alt="Project 1">
+                    <img src="images/img1.png" alt="Project 1" loading="lazy">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -83,7 +83,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/img2.jpg" alt="Project 2">
+                    <img src="images/img2.jpg" alt="Project 2" loading="lazy">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -95,7 +95,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/img3.jpg" alt="Project 3">
+                    <img src="images/img3.jpg" alt="Project 3" loading="lazy">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -107,7 +107,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/work1.jpg" alt="Project 4">
+                    <img src="images/work1.jpg" alt="Project 4" loading="lazy">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -119,7 +119,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/work1.jpg" alt="Project 5">
+                    <img src="images/work1.jpg" alt="Project 5" loading="lazy">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
@@ -131,7 +131,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="images/work1.jpg" alt="Project 6">
+                    <img src="images/work1.jpg" alt="Project 6" loading="lazy">
                 </div>
                 <div class="project-info">
                     <p class="project-category">fareszzzz</p>
